	PR c++/81888 	* parser.c (cp_parser_decomposition_declaration): Reject just 	BRACE_ENCLOSED_INITIALIZER_P initializers with nelts != 1 rather 	than all such CONSTRUCTORs, and only if is_direct_init is true.

* g++.dg/cpp1z/decomp30.C: Add a test for structured binding with
	= {} and = { a, a } initializers.
	* g++.dg/cpp1z/decomp31.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255180 138bc75d-0d04-0410-961f-82ee72b054a4